--- a/my-avue/index.html
+++ b/my-avue/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>my-avue</title>
-    <script src="https://cdn.staticfile.org/echarts/4.2.1-rc1/echarts.min.js"></script>
-	<script src="https://avuejs.com/theme/avue.project.js"></script>
-	<script src="https://avuejs.com/theme/halloween.project.js"></script>
-	<script src="https://avuejs.com/theme/wonderland.project.js"></script>
-
-	<script src="https://cdn.bootcdn.net/ajax/libs/echarts/4.2.1/echarts-en.common.js"></script>
+    <!-- <script src="https://cdn.staticfile.org/echarts/4.2.1-rc1/echarts.min.js"></script> -->
+    <script crossorigin="anonymous" integrity="sha384-et+fqdf7kslHL5Ip8rXSJPUPODLa7eMfpFTBaCfnlMzrcAz/wxI5Xm/mNTZwd+7H" src="https://lib.baomitu.com/echarts/4.7.0/echarts.min.js"></script>
+    
+	
+	</script>
 	<script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=XQiMybAuRehU2HAN7mwxSaaf1Sf5trvq"></script>	
 
 	
